@@ -59,8 +59,6 @@ Path::Class::File = 0
 Scalar::Util = 0
 Storable = 0
 Task::Weaken = 0 ; to ensure Scalar::Util was built with weaken()
-Template = 0 ; form->start and ->end still require TT
-             ; so does t/elements/render_method
 YAML::XS = 0.32
 
 [Prereqs / TestRequires]
