@@ -2499,6 +2499,10 @@ L<HTML::Template>: C<< <TMPL_VAR form> >>,
 L<Petal>: C<< <form tal:replace="form"></form> >>
 or L<Template::Magic>: C<< <!-- {form} --> >>.
 
+As of C<HTML::FormFu v1.00>, L<TT|Template> is no longer listed a required
+prerequisite - so you'll need to install it manually if you with to use the
+template files.
+
 =head2 render_method
 
 Default Value: C<string>
