@@ -1,7 +1,17 @@
 use strict;
 use warnings;
 
-use Test::More tests => 1;
+use Test::More;
+
+eval { require Template; };
+
+if ($@) {
+    plan skip_all => 'Template.pm required';
+    die $@;
+}
+else {
+    plan tests => 1;
+}
 
 use HTML::FormFu;
 
